[tool.poetry]
name = "marketplace-api-client"
version = "0.1.0"
description = "API client for marketplace (https://marketplace.eosc-portal.eu)"
authors = ["Michał Szostak <michal.szostak@cyfronet.pl>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
api-client = "^1.3.1"
pytest-vcr = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "20.8b1"
pytest-factoryboy = "^2.1.0"
factory-boy = "^3.2.0"
pylint = "^2.9.6"
pytest-mock = "^3.6.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
